@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-31T00:32:00Z",
-  "count" : 3,
+  "timestamp" : "2022-08-13T08:08:53Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
