@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-13T00:30:16Z",
+  "timestamp" : "2022-08-13T08:08:53Z",
   "count_outdated" : 1721,
   "uniques_outdated" : 505,
-  "count" : 1750,
+  "count" : 1749,
   "uniques" : 521,
   "clones" : [
     {
       "timestamp": "2022-07-30T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
