@@ -1,3 +1,10 @@
+2022-08-13T08:08:53Z:
+* notice: last 14d: unq all: 6 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 505 1721 / 521 1750
+* notice: next accum: outdated-unq outdated-all / unq all: 505 1721 / 521 1749
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
+* notice: removed / changed dates: [] / [2022-07-30]
+
 2022-08-13T00:30:16Z:
 * notice: last 14d: unq all: 6 29
 * notice: prev accum: outdated-unq outdated-all / unq all: 504 1719 / 521 1749
